--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -16,21 +16,33 @@
 		android:largeScreens="true"
 		android:normalScreens="true"
 		android:smallScreens="true"
-		android:xlargeScreens="true" />
-
+		/>
+        
 	<application
 		android:icon="@drawable/ic_launcher"
 		android:label="@string/app_name"
 		android:theme="@android:style/Theme.NoTitleBar" >
 		<activity
 			android:name=".MainActivity"
-			android:configChanges="keyboard|keyboardHidden|orientation|screenSize" >
-			<intent-filter>
-				<action android:name="android.intent.action.MAIN" />
+			android:launchMode="singleTask"
+    android:taskAffinity=""
 
-				<category android:name="android.intent.category.LAUNCHER" />
-			</intent-filter>
+			 >
+			<intent-filter>
+        <action android:name="android.intent.action.MAIN" />
+        <category android:name="android.intent.category.LAUNCHER" />
+    </intent-filter>
+
 		</activity>
+		<activity
+    android:name=".NotificationActivity"
+    android:launchMode="singleTask"
+    android:taskAffinity=""
+    >
+    <meta-data
+        android:name="android.support.PARENT_ACTIVITY"
+        android:value=".MainActivity"/>
+</activity>
 	</application>
 
 </manifest>
