--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,12 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 	package="com.landonmanning.mediaplayer.celestiaradio"
 	android:installLocation="preferExternal"
-	android:versionCode="6"
-	android:versionName="2.0.1" >
+	android:versionCode="7"
+	android:versionName="3.0" >
 
 	<uses-sdk
 		android:minSdkVersion="8"
-		android:targetSdkVersion="15" />
+		android:targetSdkVersion="17" />
 
 	<uses-permission android:name="android.permission.INTERNET" />
 
@@ -15,21 +15,30 @@
 		android:anyDensity="true"
 		android:largeScreens="true"
 		android:normalScreens="true"
-		android:smallScreens="true"
-		android:xlargeScreens="true" />
+		android:smallScreens="true" />
 
 	<application
+		android:allowBackup="true"
 		android:icon="@drawable/ic_launcher"
 		android:label="@string/app_name"
 		android:theme="@android:style/Theme.NoTitleBar" >
 		<activity
 			android:name=".MainActivity"
-			android:configChanges="keyboard|keyboardHidden|orientation|screenSize" >
+			android:launchMode="singleTask"
+			android:taskAffinity="" >
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 
 				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
+		</activity>
+		<activity
+			android:name=".NotificationActivity"
+			android:launchMode="singleTask"
+			android:taskAffinity="" >
+			<meta-data
+				android:name="android.support.PARENT_ACTIVITY"
+				android:value=".MainActivity" />
 		</activity>
 	</application>
 
