--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 	package="com.landonmanning.mediaplayer.celestiaradio"
 	android:installLocation="preferExternal"
-	android:versionCode="7"
-	android:versionName="3.0" >
+	android:versionCode="8"
+	android:versionName="3.1" >
 
 	<uses-sdk
 		android:minSdkVersion="8"
@@ -15,31 +15,35 @@
 		android:anyDensity="true"
 		android:largeScreens="true"
 		android:normalScreens="true"
-		android:smallScreens="true" />
-
+		android:smallScreens="true"
+		/>
+        
 	<application
-		android:allowBackup="true"
 		android:icon="@drawable/ic_launcher"
 		android:label="@string/app_name"
-		android:theme="@android:style/Theme.NoTitleBar" >
+		android:theme="@android:style/Theme.NoTitleBar"
+		android:allowBackup="true" >
 		<activity
 			android:name=".MainActivity"
 			android:launchMode="singleTask"
-			android:taskAffinity="" >
-			<intent-filter>
-				<action android:name="android.intent.action.MAIN" />
+    android:taskAffinity=""
 
-				<category android:name="android.intent.category.LAUNCHER" />
-			</intent-filter>
+			 >
+			<intent-filter>
+        <action android:name="android.intent.action.MAIN" />
+        <category android:name="android.intent.category.LAUNCHER" />
+    </intent-filter>
+
 		</activity>
 		<activity
-			android:name=".NotificationActivity"
-			android:launchMode="singleTask"
-			android:taskAffinity="" >
-			<meta-data
-				android:name="android.support.PARENT_ACTIVITY"
-				android:value=".MainActivity" />
-		</activity>
+    android:name=".NotificationActivity"
+    android:launchMode="singleTask"
+    android:taskAffinity=""
+    >
+    <meta-data
+        android:name="android.support.PARENT_ACTIVITY"
+        android:value=".MainActivity"/>
+</activity>
 	</application>
 
 </manifest>
